[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pldashboard-updater"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12",
    "numpy>=2.0",
    "pandas>=2.0",
    "pymongo>=4.0",
    "python-dotenv>=1.0",
    "timebudget>=0.7.1",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
updater = "updater.run:main"

[tool.setuptools.packages.find]
where = ["src"]
