[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pldashboard-updater"
version = "0.1.0"
# Upper bound matches the Dockerfile's python3.13 base image. Without it uv
# resolves against the newest interpreter on the host, where wheels for the
# pinned dependencies may not exist yet.
requires-python = ">=3.13,<3.14"
# Only direct imports are listed; transitive packages are pinned by uv.lock.
# Ranges are capped at the next major so `uv lock --upgrade` picks up security
# and bug fixes without silently crossing a breaking release. Exact versions
# stay reproducible via uv.lock.
dependencies = [
    "aiohttp>=3.12.15,<4",
    "numpy>=2.3.2,<3",
    "pandas>=3.0.3,<4",
    "pymongo>=4.13.2,<5",
    "python-dotenv>=1.1.1,<2",
    "timebudget>=0.7.1,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
updater = "updater.main:main"

[tool.setuptools.packages.find]
where = ["src"]
