[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pldashboard-updater"
version = "0.1.0"
# Upper bound matches the Dockerfile's python3.13 base image. Without it uv
# resolves against the newest interpreter on the host, where wheels for the
# pinned dependencies may not exist yet.
requires-python = ">=3.13,<3.14"
# Only direct imports are listed; transitive packages are pinned by uv.lock.
# Ranges are capped at the next major so `uv lock --upgrade` picks up security
# and bug fixes without silently crossing a breaking release. Exact versions
# stay reproducible via uv.lock.
dependencies = [
    "aiohttp>=3.12.15,<4",
    "numpy>=2.3.2,<3",
    "pandas>=3.0.3,<4",
    "pymongo>=4.13.2,<5",
    "python-dotenv>=1.1.1,<2",
    "scipy>=1.13,<2",
    "timebudget>=0.7.1,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Deliberately narrow: these codify conventions the code already follows, so
# the config is a guard against drift rather than a new style imposed on it.
# Notably absent:
#   E501  68 existing long lines, almost all docstrings and MongoDB URIs.
#         Reflowing them is churn with no correctness gain.
#   UP045 the codebase consistently spells optionals Optional[X], not X | None.
#         That is a valid choice and flipping 71 annotations is not a cleanup.
#   B905  zip(..., strict=) would be a behaviour change, not a style fix.
select = ["E", "W", "F", "I", "UP006", "UP035", "B904"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["updater"]

[project.scripts]
updater = "updater.main:main"

[tool.setuptools.packages.find]
where = ["src"]
